added procurment flow

--- a/vhost.conf
+++ b/vhost.conf
@@ -1,6 +1,9 @@
 <VirtualHost *:80>
-    ServerName www.codentechologies.com
-    ProxyPass / http://localhost:9000/
-    ProxyPassReverse / http://localhost:9000/
-    # Other directives here
+   DocumentRoot /codenFe
+   ServerName www.codentechnologies.com
+</VirtualHost>
+
+<VirtualHost *:80>
+   DocumentRoot /htdocs
+   ServerName www.wfwvwevwevw.com
 </VirtualHost>
