--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend services for krishna nursery",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon  ../index.js"
   },
   "author": "coden",
   "license": "ISC",
@@ -24,5 +24,16 @@
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "validator": "^13.7.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NishithHM/krishnanurserybe.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NishithHM/krishnanurserybe/issues"
+  },
+  "homepage": "https://github.com/NishithHM/krishnanurserybe#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
