--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "coden",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1320.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
