--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "mongodb": "^5.0.0",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "repository": {
     "type": "git",
