--- a/vhost.conf
+++ b/vhost.conf
@@ -1,9 +1,9 @@
-<VirtualHost *:80>
-   DocumentRoot /codenFe
-   ServerName www.codentechnologies.com
-</VirtualHost>
 
 <VirtualHost *:80>
-   DocumentRoot /htdocs
-   ServerName www.wfwvwevwevw.com
+   ServerName api.shreekrishnanursery.com
+   ProxyPass / http://localhost:8000/
+   ProxyPassReverse / http://localhost:8000/
+   SSLEngine on
+   SSLCertificateFile: "/opt/bitnami/apache/conf/api.shreekrishnanursery.com.crt"
+   SSLCertificateKeyFile: "/opt/bitnami/apache/conf/api.shreekrishnanursery.com.key"
 </VirtualHost>
