--- a/vhost.conf
+++ b/vhost.conf
@@ -1,8 +1,14 @@
+<VirtualHost _default_:443>
+  ServerName office.shreekrishnanursery.com
+  SSLEngine on
+  SSLCertificateFile "/opt/bitnami/apache/conf/office.shreekrishnanursery.com.crt"
+  SSLCertificateKeyFile "/opt/bitnami/apache/conf/office.shreekrishnanursery.com.key"
+</VirtualHost>
 <VirtualHost *:443>
    ServerName api.shreekrishnanursery.com
    ProxyPass / http://localhost:8000/
    ProxyPassReverse / http://localhost:8000/
    SSLEngine on
-   SSLCertificateFile: "/opt/bitnami/apache/conf/office.shreekrishnanursery.com.crt"
-   SSLCertificateKeyFile: "/opt/bitnami/apache/conf/office.shreekrishnanursery.com.key"
+   SSLCertificateFile "/opt/bitnami/apache/conf/api.shreekrishnanursery.com.crt"
+   SSLCertificateKeyFile "/opt/bitnami/apache/conf/api.shreekrishnanursery.com.key"
 </VirtualHost>
