--- a/vhost.conf
+++ b/vhost.conf
@@ -1,4 +1,13 @@
 <VirtualHost _default_:443>
+<IfModule mod_rewrite.c>
+  RewriteEngine On
+  RewriteBase /
+  RewriteRule ^index\.html$ - [L]
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_FILENAME} !-l
+  RewriteRule . /index.html [L]
+</IfModule>
   ServerName office.shreekrishnanursery.com
   SSLEngine on
   SSLCertificateFile "/opt/bitnami/apache/conf/office.shreekrishnanursery.com.crt"
