--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^5.0.0",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "uuid": "^9.0.0",
     "validator": "^13.7.0",
     "winston": "^3.8.2",
