--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cryptr": "^6.1.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "joi": "^17.7.0",
