--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
+    "pdf-merger-js": "^3.3.0",
     "request": "^2.88.2",
     "uuid": "^9.0.0",
     "validator": "^13.7.0",
