--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "express-validator": "^7.2.0",
     "helmet": "^6.0.1",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
@@ -30,7 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
     "request": "^2.88.2",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "validator": "^13.7.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
