--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "compression": "^1.7.4",
+    "convert-excel-to-json": "^1.7.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cryptr": "^6.1.0",
@@ -20,6 +21,7 @@
     "dotenv": "^16.0.3",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "express-validator": "^7.2.0",
     "helmet": "^6.0.1",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
@@ -30,7 +32,7 @@
     "node-cron": "^3.0.2",
     "pdf-merger-js": "^3.3.0",
     "request": "^2.88.2",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "validator": "^13.7.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
