--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1320.0",
-    "bcrypt": "^5.1.0",
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.1",
     "compression": "^1.7.4",
     "convert-excel-to-json": "^1.7.0",
