--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "coden",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "aws-sdk": "^2.1320.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
